--- a/expdlg.ui
+++ b/expdlg.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>数据导出目录选择</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>9</x>
@@ -139,6 +139,9 @@
         <property name="text">
          <string>...</string>
         </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
      </layout>
@@ -163,6 +166,9 @@
         <property name="text">
          <string>导出</string>
         </property>
+        <property name="default">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -176,8 +182,6 @@
     </item>
    </layout>
   </widget>
-  <zorder>label_3</zorder>
-  <zorder>layoutWidget</zorder>
  </widget>
  <resources/>
  <connections/>
